[image_analysis/trench_detection,shenker/image_analysis] find_trenches now accepts fixed angle in addition to automatically fitting. With angle=0 we run into a bug in edge_point, test sketched out in notebook, fix WIP.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230605 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230605 Trench detection.ipynb
@@ -707,14 +707,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "diag = util.tree()\n",
-    "trenches, info = trench_detection.find_trenches(\n",
-    "    img_t,\n",
-    "    join_info=False,\n",
-    "    width_to_line_width_ratio=2,\n",
-    "    width_to_pitch_ratio=None,\n",
-    "    peak_func=trench_detection.peaks.find_peaks,\n",
-    "    diagnostics=diag,\n",
+    "res = trench_detection.hough.find_periodic_lines(\n",
+    "    img_t, theta=np.linspace(-np.deg2rad(10), np.deg2rad(10), 400)\n",
     ")"
    ]
   },
@@ -725,7 +719,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches[\"line_widths\"].plot.hist(bins=100)"
+    "%%time\n",
+    "res2 = trench_detection.hough.find_periodic_lines(img_t, theta=[np.deg2rad(0)])"
    ]
   },
   {
@@ -735,7 +730,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info2"
+    "%%time\n",
+    "diag = util.tree()\n",
+    "trenches, info = trench_detection.find_trenches(\n",
+    "    img_t,\n",
+    "    # angle=np.deg2rad(0.001),\n",
+    "    join_info=False,\n",
+    "    width=8,\n",
+    "    # width_to_line_width_ratio=2,\n",
+    "    # width_to_pitch_ratio=None,\n",
+    "    # peak_func=trench_detection.peaks.find_peaks,\n",
+    "    diagnostics=diag,\n",
+    ")"
    ]
   },
   {
@@ -745,11 +751,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "trenches, info = trench_detection.find_trenches(\n",
-    "    img_t, angle=0.5, join_info=False, return_bboxes=True, diagnostics=diag\n",
-    ")"
+    "info"
    ]
   },
   {
@@ -759,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"bboxes\"].opts(frame_width=800, aspect=1)"
+    "diag[\"bboxes\"]"
    ]
   },
   {
@@ -769,7 +771,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info2"
+    "x_lim = np.array([0, 9])\n",
+    "y_lim = np.array([2, 7])\n",
+    "thetas = np.linspace(0, 2 * np.pi, 100)\n",
+    "for x0, x1 in [\n",
+    "    ((x_lim[0], y_lim.sum() / 2), (x_lim[0] + 1e-9, y_lim.sum() / 2)),\n",
+    "    ((x_lim[1], y_lim.sum() / 2), (x_lim[1] - 1e-9, y_lim.sum() / 2)),\n",
+    "    ((x_lim.sum() / 2, y_lim[0]), (x_lim.sum() / 2, y_lim[0] + 1e-9)),\n",
+    "    ((x_lim.sum() / 2, y_lim[1]), (x_lim.sum() / 2, y_lim[1] - 1e9)),\n",
+    "]:\n",
+    "    for theta in thetas[:2]:\n",
+    "        y0 = trench_detection.geometry.edge_point(x0, theta, x_lim, y_lim)\n",
+    "        y1 = trench_detection.geometry.edge_point(x1, theta, x_lim, y_lim)\n",
+    "        print(\"======\", y0, y1)"
    ]
   },
   {
@@ -779,7 +793,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches2[trenches2[\"line_widths\"] == 0]"
+    "diag.keys()"
    ]
   },
   {
@@ -789,7 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches2[trenches2[\"line_widths\"] == 0][\"top_y\"].plot.hist(bins=100)"
+    "diag[\"labeling\"][\"find_periodic_lines\"].keys()"
    ]
   },
   {
@@ -799,7 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info2"
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"h_std\"]"
    ]
   },
   {
@@ -809,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2.keys()"
+    "diag[\"bboxes\"].opts(frame_width=800, aspect=1)"
    ]
   },
   {
@@ -819,7 +833,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"find_periodic_lines\"].keys()"
+    "info2"
    ]
   },
   {
@@ -829,7 +843,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+    "trenches2[trenches2[\"line_widths\"] == 0]"
    ]
   },
   {
@@ -839,7 +853,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"set_finding\"].keys()"
+    "trenches2[trenches2[\"line_widths\"] == 0][\"top_y\"].plot.hist(bins=100)"
    ]
   },
   {
@@ -849,13 +863,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"set_finding\"][\"profiles\"]"
+    "info2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"find_periodic_lines\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"set_finding\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"set_finding\"][\"profiles\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
