--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230606 FISH.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230606 FISH.ipynb
@@ -28,6 +28,7 @@
     "import distributed\n",
     "import h5py\n",
     "import holoviews as hv\n",
+    "import hvplot.pandas\n",
     "import matplotlib.pyplot as plt\n",
     "import nd2reader\n",
     "import numpy as np\n",
@@ -649,7 +650,8 @@
    "cell_type": "markdown",
    "id": "39",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "# Test"
@@ -1385,7 +1387,7 @@
    },
    "outputs": [],
    "source": [
-    "bit_names = [f\"{ch}_{t}\" for ch in fish_channels[1:] for t in fish_timepoints[:-1]]"
+    "bit_names = [(ch, str(t)) for ch in fish_channels[1:] for t in fish_timepoints[:-1]]"
    ]
   },
   {
@@ -1403,10 +1405,313 @@
     "        for trench_idx, ary in fish_metrics.items()\n",
     "        if ary is not None\n",
     "    },\n",
-    "    columns=bit_names,\n",
+    "    columns=pd.MultiIndex.from_tuples(bit_names, names=[\"channel\", \"timepoint\"]),\n",
     "    orient=\"index\",\n",
-    ")\n",
+    ").rename_axis(index=\"trench_idx\")\n",
     "fish_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df2 = fish_metrics_df.melt(ignore_index=False).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_thresholds = {\"GFP\": 0.007, \"Cy5\": 0.005, \"Cy7\": 0.001}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df2[\"ground_truth\"] = fish_metrics_df2[\"value\"] > fish_metrics_df2[\n",
+    "    \"channel\"\n",
+    "].map(fish_thresholds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df2[fish_metrics_df2[\"trench_idx\"] == 1901]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "(fish_metrics_df2.groupby(\"trench_idx\").sum(\"ground_truth\") == 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df2.groupby(\"channel\").apply(lambda x: x[\"ground_truth\"].sum() / len(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "(fish_metrics_df2.groupby(\"channel\").sum(\"ground_truth\") == 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "111",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_image(image.unstack_multichannel(fish_stacks0[1901][1:, :9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = fish_stacks0[1901][1:, :9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y = x - x.min(axis=1)[:, np.newaxis, :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "114",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_image(image.unstack_multichannel(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(weighted_mean(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "116",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hv.Violin(fish_metrics_df2, [\"channel\", \"timepoint\"], \"value\").opts(\n",
+    "    hv.opts(\n",
+    "        width=700,\n",
+    "        show_legend=True,\n",
+    "        violin_color=hv.dim(\"channel\").str(),\n",
+    "        inner=None,\n",
+    "        # violin_width=1,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "117",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hv.Violin(fish_metrics_df2, [\"channel\", \"timepoint\", \"ground_truth\"], \"value\").opts(\n",
+    "    hv.opts(\n",
+    "        width=700,\n",
+    "        show_legend=True,\n",
+    "        # violin_color=hv.dim(\"channel\").str(),\n",
+    "        split=hv.dim(\"ground_truth\"),\n",
+    "        violin_width=3,\n",
+    "        inner=None,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "118",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds = hv.Dataset(fish_metrics_df2, [\"channel\", \"timepoint\", \"ground_truth\"], \"value\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds.to(hv.Violin, [\"timepoint\", \"ground_truth\"]).layout(\"channel\").opts(\n",
+    "    hv.opts.Violin(\n",
+    "        width=700,\n",
+    "        # show_legend=True,\n",
+    "        # violin_color=hv.dim(\"channel\").str(),\n",
+    "        split=hv.dim(\"ground_truth\"),\n",
+    "        violin_width=3,\n",
+    "        inner=None,\n",
+    "        axiswise=True,\n",
+    "    )\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "120",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "z = ds.to(hv.Violin, [\"timepoint\"]).overlay(\"ground_truth\").layout(\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "121",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "_stacked_violins = (\n",
+    "    ds.to(hv.Violin, [\"timepoint\"]).overlay(\"ground_truth\").layout(\"channel\")\n",
+    ")\n",
+    "\n",
+    "hv.Layout([v.redim(value=k) for k, v in _stacked_violins.items()]).opts(\n",
+    "    hv.opts.Violin(\n",
+    "        width=700,\n",
+    "        # show_legend=True,\n",
+    "        # violin_color=hv.dim(\"channel\").str(),\n",
+    "        # violin_width=3,\n",
+    "        inner=None,\n",
+    "    )\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# fish_metrics_df2.groupby(\"channel\").apply(lambda x: hv.Violin(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Layout()"
    ]
   }
  ],
