[shenker/image_analysis] WIP FISH: KDE plot grids for FISH metrics.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230607 FISH.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230607 FISH.ipynb
@@ -1420,7 +1420,7 @@
    },
    "outputs": [],
    "source": [
-    "fish_metrics_df2"
+    "fish_metrics_df2 = fish_metrics_df.melt(ignore_index=False).reset_index()"
    ]
   },
   {
@@ -1432,7 +1432,7 @@
    },
    "outputs": [],
    "source": [
-    "fish_metrics_df2 = fish_metrics_df.melt(ignore_index=False).reset_index()"
+    "fish_metrics_df2"
    ]
   },
   {
@@ -1444,25 +1444,13 @@
    },
    "outputs": [],
    "source": [
-    "fish_metrics_df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "105",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "fish_thresholds = {\"GFP\": 0.007, \"Cy5\": 0.005, \"Cy7\": 0.001}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1476,19 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fish_metrics_df2[fish_metrics_df2[\"trench_idx\"] == 1901]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "108",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1500,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1512,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1524,13 +1500,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "109",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# idx = 1901\n",
+    "idx = 2350"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = fish_stacks0[idx][1:, :9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "111",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "display_image(image.unstack_multichannel(fish_stacks0[1901][1:, :9]))"
+    "fish_metrics_df2[fish_metrics_df2[\"trench_idx\"] == idx]"
    ]
   },
   {
@@ -1542,7 +1543,7 @@
    },
    "outputs": [],
    "source": [
-    "x = fish_stacks0[1901][1:, :9]"
+    "display_image(image.unstack_multichannel(x))"
    ]
   },
   {
@@ -1578,7 +1579,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(weighted_mean(x))"
+    "plt.imshow(weighted_mean(y))"
    ]
   },
   {
@@ -1688,6 +1689,8 @@
     "        # violin_color=hv.dim(\"channel\").str(),\n",
     "        # violin_width=3,\n",
     "        inner=None,\n",
+    "        bandwidth=0.2,\n",
+    "        cut=0.05,\n",
     "    )\n",
     ").cols(1)"
    ]
@@ -1712,6 +1715,152 @@
    "outputs": [],
    "source": [
     "hv.Layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.GridSpace(\n",
+    "    {\n",
+    "        (timepoint, channel): hv.Distribution(df, \"value\").redim(value=channel)\n",
+    "        for (timepoint, channel), df in fish_metrics_df2.groupby(\n",
+    "            [\"timepoint\", \"channel\"]\n",
+    "        )\n",
+    "    },\n",
+    "    kdims=[\"timepoint\", \"channel\"],\n",
+    ")  # .opts(hv.opts.Distribution(logy=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "125",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hv.GridSpace(\n",
+    "    {\n",
+    "        (timepoint, channel): hv.Dataset(df, [\"ground_truth\"], \"value\").to(\n",
+    "            hv.Distribution\n",
+    "        )\n",
+    "        # .overlay(\"ground_truth\")\n",
+    "        # hv.Distribution(df, \"value\").redim(value=channel)\n",
+    "        for (timepoint, channel), df in fish_metrics_df2.groupby(\n",
+    "            [\"timepoint\", \"channel\"]\n",
+    "        )\n",
+    "    },\n",
+    "    kdims=[\"timepoint\", \"channel\"],\n",
+    ")  # .opts(hv.opts.Distribution(show_legend=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hv.GridSpace(\n",
+    "    {\n",
+    "        (timepoint, channel): (\n",
+    "            hv.Distribution(df[df[\"ground_truth\"]], \"value\", label=\"On\")\n",
+    "            * hv.Distribution(df[~df[\"ground_truth\"]], \"value\", label=\"Off\")\n",
+    "        ).redim(value=channel)\n",
+    "        for (timepoint, channel), df in fish_metrics_df2.groupby(\n",
+    "            [\"timepoint\", \"channel\"]\n",
+    "        )\n",
+    "    },\n",
+    "    kdims=[\"timepoint\", \"channel\"],\n",
+    ").opts(hv.opts.Distribution(show_legend=True, bandwidth=0.3, cut=0.05))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "127",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.sampledata.iris import flowers\n",
+    "from holoviews.operation import gridmatrix\n",
+    "\n",
+    "iris_ds = hv.Dataset(flowers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "128",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "iris_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df3 = fish_metrics_df.set_axis(\n",
+    "    [\"_\".join(c) for c in fish_metrics_df.columns], axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "130",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fish_metrics_df3 = fish_metrics_df3.loc[\n",
+    "    :, [*fish_metrics_df3.columns[3:6], *fish_metrics_df3.columns[13:16]]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "131",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "density_grid = gridmatrix(\n",
+    "    hv.Dataset(fish_metrics_df3), diagonal_type=hv.Distribution, chart_type=hv.Bivariate\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "density_grid"
    ]
   }
  ],
