[shenker/image_analysis,image_analysis/trench_detection] Fixed trench_detection.geometry.edge_point. Left debugging prints in, will remove in next commit.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230612 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230612 Trench detection.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import itertools as it\n",
@@ -49,7 +51,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%load_ext pyinstrument"
@@ -59,7 +63,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -70,7 +76,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from paulssonlab.image_analysis import *\n",
@@ -81,7 +89,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "hv.extension(\"bokeh\")"
@@ -156,7 +166,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# filename = \"/home/jqs1/scratch/jqs1/microscopy/230213/230213induction.nd2\"\n",
@@ -169,7 +181,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "nd2 = nd2reader.ND2Reader(filename)"
@@ -179,7 +193,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "img = nd2.get_frame_2D(v=8, c=0, t=10)"
@@ -688,7 +704,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -727,14 +745,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "65",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%time\n",
     "diag = util.tree()\n",
     "trenches, info = trench_detection.find_trenches(\n",
     "    img_t,\n",
-    "    # angle=np.deg2rad(0.001),\n",
+    "    angle=np.deg2rad(0),\n",
     "    join_info=False,\n",
     "    width=8,\n",
     "    # width_to_line_width_ratio=2,\n",
@@ -748,7 +768,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "info"
@@ -758,7 +780,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "67",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "diag[\"bboxes\"]"
@@ -771,19 +795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_lim = np.array([0, 9])\n",
-    "y_lim = np.array([2, 7])\n",
-    "thetas = np.linspace(0, 2 * np.pi, 100)\n",
-    "for x0, x1 in [\n",
-    "    ((x_lim[0], y_lim.sum() / 2), (x_lim[0] + 1e-9, y_lim.sum() / 2)),\n",
-    "    ((x_lim[1], y_lim.sum() / 2), (x_lim[1] - 1e-9, y_lim.sum() / 2)),\n",
-    "    ((x_lim.sum() / 2, y_lim[0]), (x_lim.sum() / 2, y_lim[0] + 1e-9)),\n",
-    "    ((x_lim.sum() / 2, y_lim[1]), (x_lim.sum() / 2, y_lim[1] - 1e9)),\n",
-    "]:\n",
-    "    for theta in thetas[:2]:\n",
-    "        y0 = trench_detection.geometry.edge_point(x0, theta, x_lim, y_lim)\n",
-    "        y1 = trench_detection.geometry.edge_point(x1, theta, x_lim, y_lim)\n",
-    "        print(\"======\", y0, y1)"
+    "diag.keys()"
    ]
   },
   {
@@ -793,7 +805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag.keys()"
+    "diag[\"labeling\"][\"find_periodic_lines\"].keys()"
    ]
   },
   {
@@ -803,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"].keys()"
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"h_std\"]"
    ]
   },
   {
@@ -813,7 +825,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"h_std\"]"
+    "diag[\"bboxes\"].opts(frame_width=800, aspect=1)"
    ]
   },
   {
@@ -823,7 +835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"bboxes\"].opts(frame_width=800, aspect=1)"
+    "info2"
    ]
   },
   {
@@ -833,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info2"
+    "trenches2[trenches2[\"line_widths\"] == 0]"
    ]
   },
   {
@@ -843,7 +855,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches2[trenches2[\"line_widths\"] == 0]"
+    "trenches2[trenches2[\"line_widths\"] == 0][\"top_y\"].plot.hist(bins=100)"
    ]
   },
   {
@@ -853,7 +865,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches2[trenches2[\"line_widths\"] == 0][\"top_y\"].plot.hist(bins=100)"
+    "info2"
    ]
   },
   {
@@ -863,7 +875,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info2"
+    "diag2.keys()"
    ]
   },
   {
@@ -873,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2.keys()"
+    "diag2[\"labeling\"][\"find_periodic_lines\"].keys()"
    ]
   },
   {
@@ -883,7 +895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"find_periodic_lines\"].keys()"
+    "diag2[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
    ]
   },
   {
@@ -893,7 +905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+    "diag2[\"labeling\"][\"set_finding\"].keys()"
    ]
   },
   {
@@ -903,23 +915,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"set_finding\"].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "diag2[\"labeling\"][\"set_finding\"][\"profiles\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,6 +1125,54 @@
     "    slices=dict(v=slice(1), t=slice(1)),\n",
     "):\n",
     "    handle_message(pipeline, msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97",
+   "metadata": {},
+   "source": [
+    "# edge_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "np.tan(np.pi / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "eps = 1e-7\n",
+    "x_lim = np.array([0, 9])\n",
+    "y_lim = np.array([2, 7])\n",
+    "thetas = np.linspace(0, 2 * np.pi, 100)\n",
+    "for x0, x1 in [\n",
+    "    ((x_lim[0], y_lim.sum() / 2), (x_lim[0] + eps, y_lim.sum() / 2)),\n",
+    "    ((x_lim[1], y_lim.sum() / 2), (x_lim[1] - eps, y_lim.sum() / 2)),\n",
+    "    ((x_lim.sum() / 2, y_lim[0]), (x_lim.sum() / 2, y_lim[0] + eps)),\n",
+    "    ((x_lim.sum() / 2, y_lim[1]), (x_lim.sum() / 2, y_lim[1] - eps)),\n",
+    "]:\n",
+    "    for theta in thetas[:2]:\n",
+    "        print(\"*1\")\n",
+    "        y0 = trench_detection.geometry.edge_point(x0, theta, x_lim, y_lim)\n",
+    "        print(\"*2\")\n",
+    "        y1 = trench_detection.geometry.edge_point(x1, theta, x_lim, y_lim)\n",
+    "        print(\"======\", y0, y1)\n",
+    "        np.testing.assert_almost_equal(y0, y1, decimal=5, err_msg=\"\", verbose=True)"
    ]
   }
  ],
