--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230612 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230612 Trench detection.ipynb
@@ -754,7 +754,7 @@
     "diag = util.tree()\n",
     "trenches, info = trench_detection.find_trenches(\n",
     "    img_t,\n",
-    "    angle=np.deg2rad(0),\n",
+    "    angle=np.deg2rad(3 / 2 * np.pi),\n",
     "    join_info=False,\n",
     "    width=8,\n",
     "    # width_to_line_width_ratio=2,\n",
@@ -1144,35 +1144,257 @@
    },
    "outputs": [],
    "source": [
-    "np.tan(np.pi / 2)"
+    "4.759988869075444 / np.pi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps = 1e-7\n",
+    "x_lim = np.array([1, 9])\n",
+    "y_lim = np.array([2, 7])\n",
+    "thetas = np.linspace(0, 2 * np.pi, 100)\n",
+    "# for x0, x1 in [\n",
+    "#     ((x_lim[0], y_lim.sum() / 2), (x_lim[0] + eps, y_lim.sum() / 2)),\n",
+    "#     ((x_lim[1], y_lim.sum() / 2), (x_lim[1] - eps, y_lim.sum() / 2)),\n",
+    "#     ((x_lim.sum() / 2, y_lim[0]), (x_lim.sum() / 2, y_lim[0] + eps)),\n",
+    "#     ((x_lim.sum() / 2, y_lim[1]), (x_lim.sum() / 2, y_lim[1] - eps)),\n",
+    "# ]:\n",
+    "for idx, (x0, x1) in enumerate(\n",
+    "    [\n",
+    "        ((x_lim[0], y_lim[0]), (x_lim[0] + eps, y_lim[0])),\n",
+    "        ((x_lim[1], y_lim[0]), (x_lim[1] - eps, y_lim[0])),\n",
+    "        ((x_lim[0], y_lim[1]), (x_lim[0] + eps, y_lim[1])),\n",
+    "        ((x_lim[1], y_lim[1]), (x_lim[1] - eps, y_lim[1])),\n",
+    "        ((x_lim[0], y_lim[0]), (x_lim[0], y_lim[0] + eps)),\n",
+    "        ((x_lim[0], y_lim[1]), (x_lim[0], y_lim[1] - eps)),\n",
+    "        ((x_lim[1], y_lim[0]), (x_lim[1], y_lim[0] + eps)),\n",
+    "        ((x_lim[1], y_lim[1]), (x_lim[1], y_lim[1] - eps)),\n",
+    "    ]\n",
+    "):\n",
+    "    for theta in thetas:\n",
+    "        y0 = trench_detection.geometry.edge_point(x0, theta, x_lim, y_lim)\n",
+    "        y1 = trench_detection.geometry.edge_point(x1, theta, x_lim, y_lim)\n",
+    "        # print(\"======\", y0, y1)\n",
+    "        try:\n",
+    "            np.testing.assert_almost_equal(y0, y1, decimal=5, err_msg=\"\", verbose=True)\n",
+    "        except:\n",
+    "            print(\"idx\", idx, \"x0\", x0, \"x1\", x1, \"theta\", theta, \"y0\", y0, \"y1\", y1)\n",
+    "            raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "100",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "eps = 1e-7\n",
-    "x_lim = np.array([0, 9])\n",
-    "y_lim = np.array([2, 7])\n",
-    "thetas = np.linspace(0, 2 * np.pi, 100)\n",
-    "for x0, x1 in [\n",
-    "    ((x_lim[0], y_lim.sum() / 2), (x_lim[0] + eps, y_lim.sum() / 2)),\n",
-    "    ((x_lim[1], y_lim.sum() / 2), (x_lim[1] - eps, y_lim.sum() / 2)),\n",
-    "    ((x_lim.sum() / 2, y_lim[0]), (x_lim.sum() / 2, y_lim[0] + eps)),\n",
-    "    ((x_lim.sum() / 2, y_lim[1]), (x_lim.sum() / 2, y_lim[1] - eps)),\n",
-    "]:\n",
-    "    for theta in thetas[:2]:\n",
-    "        print(\"*1\")\n",
-    "        y0 = trench_detection.geometry.edge_point(x0, theta, x_lim, y_lim)\n",
-    "        print(\"*2\")\n",
-    "        y1 = trench_detection.geometry.edge_point(x1, theta, x_lim, y_lim)\n",
-    "        print(\"======\", y0, y1)\n",
-    "        np.testing.assert_almost_equal(y0, y1, decimal=5, err_msg=\"\", verbose=True)"
+    "(np.linspace(3 / 2 * np.pi, 2 * np.pi, 10) - np.pi) % (2 * np.pi) < 0 - np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "101",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "2 * np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "3 / 2 * np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "4.75 % (2 * np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "trench_detection.geometry.edge_point((9, 2), 4.72, x_lim, y_lim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "-0.9 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "-np.pi % (2 * np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "4.759988869075444 - 3 / 2 * np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "trench_detection.geometry.edge_point((9, 2), 4.759988869075444, x_lim, y_lim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from importlib import reload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "reload(trench_detection.geometry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta > 3 / 2 * np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "thetas = np.linspace(0, 2 * np.pi, 200)\n",
+    "pts = [\n",
+    "    trench_detection.geometry.edge_point((x_lim[1], y_lim[1]), theta, x_lim, y_lim)\n",
+    "    for theta in thetas\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.scatter(*np.array(pts).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "114",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.scatter(thetas, np.array(pts).T[0])\n",
+    "plt.scatter(thetas, np.array(pts).T[1])\n",
+    "plt.axvline(np.pi / 2)\n",
+    "plt.axvline(np.pi)\n",
+    "plt.axvline(3 / 2 * np.pi);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "(x_lim[1], y_lim[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "116",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "trench_detection.geometry.edge_point((x_lim[1], y_lim[1]), 0 * np.pi, x_lim, y_lim)"
    ]
   }
  ],
