--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230614 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230614 Trench detection.ipynb
@@ -754,7 +754,7 @@
     "diag = util.tree()\n",
     "trenches, info = trench_detection.find_trenches(\n",
     "    img_t,\n",
-    "    angle=np.deg2rad(3 / 2 * np.pi),\n",
+    "    angle=np.deg2rad(30),\n",
     "    join_info=False,\n",
     "    width=8,\n",
     "    # width_to_line_width_ratio=2,\n",
@@ -773,7 +773,7 @@
    },
    "outputs": [],
    "source": [
-    "info"
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
    ]
   },
   {
@@ -785,47 +785,55 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"bboxes\"]"
+    "h, theta, rho = image.hough_line_intensity(np.ones((200, 500)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "68",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag.keys()"
+    "len(theta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "69",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"].keys()"
+    "len(rho)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "70",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"find_periodic_lines\"][\"h_std\"]"
+    "plt.imshow(h)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "71",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag[\"bboxes\"].opts(frame_width=800, aspect=1)"
+    "plt.imshow(h.T != 0)"
    ]
   },
   {
@@ -835,67 +843,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info2"
+    "np.sqrt(200**2 + 500**2) + np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "73",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "trenches2[trenches2[\"line_widths\"] == 0]"
+    "plt.plot(theta, (200 * np.sin(theta) + 500 * np.cos(theta)));"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "74",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "trenches2[trenches2[\"line_widths\"] == 0][\"top_y\"].plot.hist(bins=100)"
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(h != 0, extent=(theta[0], theta[-1], rho[-1], rho[0]), aspect=0.002)\n",
+    "plt.plot(theta, 500 * np.cos(theta))\n",
+    "plt.plot(theta, 200 * np.sin(theta))\n",
+    "# plt.plot(theta, np.sqrt(200**2+500**2)*np.cos(theta - np.pi / 5))\n",
+    "plt.plot(\n",
+    "    theta,\n",
+    "    0 * np.sqrt(200**2 + 500**2) + (200 * np.sin(theta) + 500 * np.cos(theta)),\n",
+    ");"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "75",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "info2"
+    "info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "76",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag2.keys()"
+    "diag[\"bboxes\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "77",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"find_periodic_lines\"].keys()"
+    "diag[\"labeling\"][\"set_finding\"].keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "78",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+    "diag[\"labeling\"][\"set_finding\"].keys()"
    ]
   },
   {
@@ -905,13 +933,135 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag2[\"labeling\"][\"set_finding\"].keys()"
+    "diag[\"labeling\"][\"set_finding\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "80",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"find_periodic_lines\"][\"h_std\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"bboxes\"].opts(frame_width=800, aspect=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches2[trenches2[\"line_widths\"] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches2[trenches2[\"line_widths\"] == 0][\"top_y\"].plot.hist(bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"find_periodic_lines\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"find_periodic_lines\"][\"profile\"]  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag2[\"labeling\"][\"set_finding\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,272 +1279,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97",
-   "metadata": {},
-   "source": [
-    "# edge_points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "4.759988869075444 / np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eps = 1e-7\n",
-    "x_lim = np.array([1, 9])\n",
-    "y_lim = np.array([2, 7])\n",
-    "thetas = np.linspace(0, 2 * np.pi, 100)\n",
-    "# for x0, x1 in [\n",
-    "#     ((x_lim[0], y_lim.sum() / 2), (x_lim[0] + eps, y_lim.sum() / 2)),\n",
-    "#     ((x_lim[1], y_lim.sum() / 2), (x_lim[1] - eps, y_lim.sum() / 2)),\n",
-    "#     ((x_lim.sum() / 2, y_lim[0]), (x_lim.sum() / 2, y_lim[0] + eps)),\n",
-    "#     ((x_lim.sum() / 2, y_lim[1]), (x_lim.sum() / 2, y_lim[1] - eps)),\n",
-    "# ]:\n",
-    "for idx, (x0, x1) in enumerate(\n",
-    "    [\n",
-    "        ((x_lim[0], y_lim[0]), (x_lim[0] + eps, y_lim[0])),\n",
-    "        ((x_lim[1], y_lim[0]), (x_lim[1] - eps, y_lim[0])),\n",
-    "        ((x_lim[0], y_lim[1]), (x_lim[0] + eps, y_lim[1])),\n",
-    "        ((x_lim[1], y_lim[1]), (x_lim[1] - eps, y_lim[1])),\n",
-    "        ((x_lim[0], y_lim[0]), (x_lim[0], y_lim[0] + eps)),\n",
-    "        ((x_lim[0], y_lim[1]), (x_lim[0], y_lim[1] - eps)),\n",
-    "        ((x_lim[1], y_lim[0]), (x_lim[1], y_lim[0] + eps)),\n",
-    "        ((x_lim[1], y_lim[1]), (x_lim[1], y_lim[1] - eps)),\n",
-    "    ]\n",
-    "):\n",
-    "    for theta in thetas:\n",
-    "        y0 = trench_detection.geometry.edge_point(x0, theta, x_lim, y_lim)\n",
-    "        y1 = trench_detection.geometry.edge_point(x1, theta, x_lim, y_lim)\n",
-    "        # print(\"======\", y0, y1)\n",
-    "        try:\n",
-    "            np.testing.assert_almost_equal(y0, y1, decimal=5, err_msg=\"\", verbose=True)\n",
-    "        except:\n",
-    "            print(\"idx\", idx, \"x0\", x0, \"x1\", x1, \"theta\", theta, \"y0\", y0, \"y1\", y1)\n",
-    "            raise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "100",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "(np.linspace(3 / 2 * np.pi, 2 * np.pi, 10) - np.pi) % (2 * np.pi) < 0 - np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "101",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "2 * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "102",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "3 / 2 * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "103",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "4.75 % (2 * np.pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "104",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "trench_detection.geometry.edge_point((9, 2), 4.72, x_lim, y_lim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "105",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "-0.9 % 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "106",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "-np.pi % (2 * np.pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "107",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "4.759988869075444 - 3 / 2 * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "108",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "trench_detection.geometry.edge_point((9, 2), 4.759988869075444, x_lim, y_lim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "109",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from importlib import reload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "110",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "reload(trench_detection.geometry)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "111",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "theta > 3 / 2 * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "112",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "thetas = np.linspace(0, 2 * np.pi, 200)\n",
-    "pts = [\n",
-    "    trench_detection.geometry.edge_point((x_lim[1], y_lim[1]), theta, x_lim, y_lim)\n",
-    "    for theta in thetas\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "113",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.scatter(*np.array(pts).T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "114",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.scatter(thetas, np.array(pts).T[0])\n",
-    "plt.scatter(thetas, np.array(pts).T[1])\n",
-    "plt.axvline(np.pi / 2)\n",
-    "plt.axvline(np.pi)\n",
-    "plt.axvline(3 / 2 * np.pi);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "115",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "(x_lim[1], y_lim[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "116",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "trench_detection.geometry.edge_point((x_lim[1], y_lim[1]), 0 * np.pi, x_lim, y_lim)"
+    "# Profiles"
    ]
   }
  ],
